[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game_FoodEater/Scripts/Frog.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/frog_food.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[node name="Frog" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="FrogSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="FrogCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="FrogTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="FrogTimer" to="." method="_on_FrogTimer_timeout"]
